--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://yazantaleb94.github.io/react-yazi-tura-uygulamasi-odev-yazantaleb94",
-  "name": "react-yazi-tura-uygulamasi-odev-yazantaleb94",
+  "homepage": "http://yazantaleb94.github.io/yazi-tura-homework",
+  "name": "yazi-tura-homework",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
